Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60132

Typing error in QRasterPlatformPixmap::metric

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9
    • 5.8.0
    • GUI: Painting
    • None
    • Windows 7

      The function QRasterPlatformPixmap::metric(QPaintDevice::PaintDeviceMetric metric) in qpixmap_raster.cpp contains the following error on line 288 (Qt 5.8.0):

      return qt_defaultDpiX();

      Since this is returned when metric == QPaintDevice::PdmDpiY, the correct line is:

      return qt_defaultDpiY();

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            stian Stian Andre Olsen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes